--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"firebase:deploy": "firebase deploy",
 		"firebase:deploy:hosting": "firebase deploy --only hosting",
 		"firebase:deploy:functions": "firebase deploy --only functions",
-		"sapper:dev": "sapper dev",
+		"sapper:dev": "node_modules/sapper/sapper dev",
 		"sapper:build": "cross-env NODE_ENV=production sapper build --legacy",
 		"sapper:export": "cross-env NODE_ENV=production sapper export --legacy",
 		"static:rmdir": "rimraf - __sapper__/export",
@@ -86,6 +86,7 @@
 		"kleur": "^4.1.3",
 		"mkdirp": "^1.0.4",
 		"ncp": "^2.0.0",
+		"node-sass": "^4.14.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.1.2",
 		"postcss-import": "^13.0.0",
@@ -106,6 +107,6 @@
 		"utf-8-validate": "^5.0.2"
 	},
 	"engines": {
-		"node": "10"
+		"node": "12"
 	}
 }
