--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - name: "Checkout Repo"
         uses: actions/checkout@master
-      
-      - name: "Install pnpm"
-        uses: pnpm/action-setup@v1.2.1
+
+      - name: "Install npm"
+        uses: npm/action-setup@v1.2.1
         with:
           version: 5.8
       - name: "Install Production and Development Dependencies"
-        run: "pnpm install"
-      
+        run: "npm install"
+
       # This section makes as many pages as possible static.
       # If you don't want that, remove it and replace firebase:deploy:functions with firebase:deploy below
       - name: "Export a Static Build"
@@ -30,12 +30,12 @@ jobs:
         run: "npm run firebase:deploy:hosting"
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      
+
       # On the other hand, if you only want your site to be static, remove this section
       - name: "Build for Production"
         run: "npm run prod"
       - name: "Remove all but Production Dependencies"
-        run: "pnpm install --only prod"
+        run: "npm install --only prod"
       - name: "Deploy Functions"
         run: "npm run firebase:deploy:functions"
         env:
