--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,28 @@
 		"dbaeumer.vscode-eslint",
 		"ms-azuretools.vscode-dapr",
 		"ms-azuretools.vscode-docker",
-		"ms-vscode.vscode-typescript-tslint-plugin"
+		"ms-vscode.vscode-typescript-tslint-plugin",
+		"pivaszbs.svelte-autoimport",
+		"proverbialninja.svelte-extractor",
+		"svelte.svelte-vscode",
+		"ardenivanov.svelte-intellisense",
+		"nickyhajal.vs-code-svelte-require",
+		"halfnelson.svelte-type-checker-vscode",
+		"p1c2u.docker-compose",
+		"formulahendry.docker-explorer",
+		"marquesmps.dockerfile-validator",
+		"editorconfig.editorconfig",
+		"tombonnike.vscode-status-bar-format-toggle",
+		"donjayamanne.githistory",
+		"shyykoserhiy.git-autoconfig",
+		"codezombiech.gitignore",
+		"eamodio.gitlens",
+		"lior-chamla.google-fonts",
+		"vincaslt.highlight-matching-tag",
+		"bradlc.vscode-tailwindcss",
+		"tiibun.vscode-docker-ws",
+		"delgee.sld-docker-builder",
+		"zamarrowski.docker-vulnerability-extension"
 	],
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
