--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -66,3 +66,5 @@ RUN apt-get update \
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
+
+CMD ["sleep", "infinity"]
