--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,11 @@
 	},
 	"postCreateCommand": "npm install",
 	// Add the IDs of extensions you want installed when the container is created.
+  "mounts": [
+    "source=ext,target=/home/node/.vscode-server/extensions,type=volume",
+    "source=ext-insiders,target=/home/node/.vscode-server-insiders/extensions,type=volume",
+    "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind"
+  ],
 	"extensions": [
 		"dbaeumer.vscode-eslint",
 		"ms-azuretools.vscode-dapr",
@@ -42,5 +47,9 @@
 	// Uncomment the next line if you want to keep your containers running after VS Code shuts down.
 	// "shutdownAction": "none",
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+	"remoteUser": "node",
+	"forwardPorts": [
+		3000,
+		10000
+	]
 }
