--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"firebase-admin": "^9.2.0",
 		"firebase-functions": "^3.11.0",
 		"firebase-tools": "^8.13.1",
+		"highlight.js": "^10.4.0",
 		"node-fetch": "^2.6.1",
 		"sirv": "^1.0.7"
 	},
