--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,40 +1,19 @@
 {
-	"short_name": "Opinionated Sapper project base",
-	"name": "An extremely opinionated Sapper project base",
-	"description": "A template that includes Svelte with Sapper, Firebase functions and hosting, TypeScript and TypeGraphQL, Tailwind CSS, ESLint, and automatic building and deployment with GitHub Actions",
-	"categories": [
-		"personalization",
-		"productivity"
-	],
-	"lang": "en-US",
-	"dir": "ltr",
+	"background_color": "#ffffff",
+	"theme_color": "#333333",
+	"name": "TODO",
+	"short_name": "TODO",
+	"display": "minimal-ui",
+	"start_url": "/",
 	"icons": [
 		{
 			"src": "logo-192.png",
 			"sizes": "192x192",
-			"type": "image/png",
-			"purpose": "any maskable"
+			"type": "image/png"
 		},
 		{
 			"src": "logo-512.png",
 			"sizes": "512x512",
-			"type": "image/png",
-			"purpose": "any maskable"
-		}
-	],
-	"start_url": "/",
-	"display": "minimal-ui",
-	"background_color": "#FFFFFF",
-	"theme_color": "#3F83F8",
-	"screenshots": [
-		{
-			"src": "screenshot-1.png",
-			"sizes": "1280x720",
-			"type": "image/png"
-		},
-		{
-			"src": "screenshot-2.png",
-			"sizes": "1280x720",
 			"type": "image/png"
 		}
 	]
