--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/zsh"
 	},
-	"postCreateCommand": "npm install",
+	"postCreateCommand": "nvm install v14.14.0 && npm install",
 	// Add the IDs of extensions you want installed when the container is created.
 	"mounts": [
 		"source=ext,target=/home/node/.vscode-server/extensions,type=volume",
@@ -16,30 +16,29 @@
 		"source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind"
 	],
 	"extensions": [
+		"ardenivanov.svelte-intellisense",
+		"bradlc.vscode-tailwindcss",
+		"codezombiech.gitignore",
 		"dbaeumer.vscode-eslint",
+		"delgee.sld-docker-builder",
+		"donjayamanne.githistory",
+		"eamodio.gitlens",
+		"editorconfig.editorconfig",
+		"formulahendry.docker-explorer",
+		"lior-chamla.google-fonts",
+		"marquesmps.dockerfile-validator",
 		"ms-azuretools.vscode-dapr",
 		"ms-azuretools.vscode-docker",
 		"ms-vscode.vscode-typescript-tslint-plugin",
+		"nickyhajal.vs-code-svelte-require",
+		"p1c2u.docker-compose",
 		"pivaszbs.svelte-autoimport",
 		"proverbialninja.svelte-extractor",
-		"svelte.svelte-vscode",
-		"ardenivanov.svelte-intellisense",
-		"nickyhajal.vs-code-svelte-require",
-		"halfnelson.svelte-type-checker-vscode",
-		"p1c2u.docker-compose",
-		"formulahendry.docker-explorer",
-		"marquesmps.dockerfile-validator",
-		"editorconfig.editorconfig",
-		"tombonnike.vscode-status-bar-format-toggle",
-		"donjayamanne.githistory",
 		"shyykoserhiy.git-autoconfig",
-		"codezombiech.gitignore",
-		"eamodio.gitlens",
-		"lior-chamla.google-fonts",
-		"vincaslt.highlight-matching-tag",
-		"bradlc.vscode-tailwindcss",
+		"svelte.svelte-vscode",
 		"tiibun.vscode-docker-ws",
-		"delgee.sld-docker-builder",
+		"tombonnike.vscode-status-bar-format-toggle",
+		"vincaslt.highlight-matching-tag",
 		"zamarrowski.docker-vulnerability-extension"
 	],
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
