--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "keywords": [
     "sapper",
     "firebase",
-    "typegraphql",
     "typescript",
     "eslint",
     "postcss",
@@ -13,8 +12,7 @@
     "svelte",
     "cssnano",
     "tailwindcss",
-    "apollo-server",
-    "graphql"
+    "apollo-server"
   ],
   "repository": {
     "type": "git",
@@ -24,7 +22,7 @@
   "version": "2020.10.21",
   "scripts": {
     "eslint": "eslint",
-    "eslint:fix": "eslint --fix ./*.js ./src/*.ts ./src/components/**/*.svelte ./src/graphql/**/*.ts ./src/routes/**/*.svelte ./src/routes/**/*.ts",
+    "eslint:fix": "eslint --fix ./*.js ./src/*.ts ./src/components/**/*.svelte ./src/routes/**/*.svelte ./src/routes/**/*.ts",
     "validate": "svelte-check --ignore src/node_modules/@sapper",
     "validate:dev": "svelte-check --ignore src/node_modules/@sapper --watch",
     "firebase": "firebase",
@@ -47,6 +45,7 @@
     "deploy:export": "run-s export firebase:deploy:hosting"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
@@ -68,7 +67,6 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-typescript": "^6.0.0",
-    "@tailwindcss/ui": "^0.6.2",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/node-fetch": "^2.5.7",
@@ -83,13 +81,12 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-svelte3": "^2.7.3",
-    "graphql": "^15.3.0",
     "kleur": "^4.1.3",
     "mkdirp": "^1.0.4",
     "ncp": "^2.0.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.1.2",
+    "postcss": "^8.1.10",
     "postcss-import": "^13.0.0",
     "postcss-preset-env": "^6.7.0",
     "reflect-metadata": "^0.1.13",
@@ -101,9 +98,8 @@
     "svelte": "^3.29.0",
     "svelte-check": "^1.0.60",
     "svelte-preprocess": "^4.5.1",
-    "tailwindcss": "^1.9.5",
+    "tailwindcss": "^2.0.1",
     "tslib": "^2.0.3",
-    "type-graphql": "^1.1.0",
     "typescript": "^4.0.3",
     "utf-8-validate": "^5.0.2"
   },
