--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jonesrussell42/portfolio",
-  "description": "A template that includes Sapper for Svelte, Firebase functions and hosting, TypeScript and TypeGraphQL, Tailwind CSS, ESLint and EditorConfig, and automatic building and deployment with GitHub Actions",
+  "description": "My portfolio website that includes Sapper for Svelte, TypeScript, Tailwind CSS, ESLint and EditorConfig, and automatic building and deployment with GitHub Actions",
   "keywords": [
     "sapper",
     "firebase",
@@ -72,9 +72,6 @@
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "apollo-server-express": "^2.18.2",
-    "bufferutil": "^4.0.1",
-    "class-validator": "^0.12.2",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "eslint": "^7.11.0",
@@ -89,7 +86,6 @@
     "postcss": "^8.1.10",
     "postcss-import": "^13.0.0",
     "postcss-preset-env": "^6.7.0",
-    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rollup": "^2.32.1",
     "rollup-plugin-svelte": "^6.1.0",
@@ -100,8 +96,7 @@
     "svelte-preprocess": "^4.5.1",
     "tailwindcss": "^2.0.1",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.3",
-    "utf-8-validate": "^5.0.2"
+    "typescript": "^4.0.3"
   },
   "engines": {
     "node": "12"
