--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "sapper": "^0.28.10",
     "svelte": "^3.29.0",
     "svelte-check": "^1.0.60",
+    "svelte-fa": "github:Cweili/svelte-fa#pull/60/head",
     "svelte-preprocess": "^4.5.1",
     "tailwindcss": "^2.0.1",
     "tslib": "^2.0.3",
