--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "deploy:export": "run-s export firebase:deploy:hosting"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "autoprefixer": "^10.0.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
