--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@tailwindcss/typography": "^0.3.1",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/node-fetch": "^2.5.7",
