--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
 		"allowSyntheticDefaultImports": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"importsNotUsedAsValues": "error",
-		"isolatedModules": true,
+		"importsNotUsedAsValues": "remove",
+		"isolatedModules": false,
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"strict": true,
