--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "autoprefixer": "^10.0.3",
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "highlight.js": "^10.4.0",
     "node-fetch": "^2.6.1",
