--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "static:404:cp": "ncp __sapper__/export/404/index.html __sapper__/export/404.html",
     "static:404:rmdir": "rimraf - __sapper__/export/404",
     "dev": "run-p validate:dev sapper:dev",
-    "prod": "run-s sapper:build static:rmdir static:mkdir static:cp validate",
+    "prod": "run-s sapper:build static:rmdir static:mkdir static:cp",
     "start": "node __sapper__/build",
     "deploy": "run-s prod firebase:deploy",
     "export": "run-s sapper:export static:404:cp static:404:rmdir validate",
