add some devcontainer extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,23 @@
 		"zamarrowski.docker-vulnerability-extension",
 		"halfnelson.svelte-type-checker-vscode",
 		"britesnow.vscode-toggle-quotes",
-		"visualstudioexptteam.vscodeintellicode"
+		"visualstudioexptteam.vscodeintellicode",
+		"formulahendry.auto-close-tag",
+		"formulahendry.auto-rename-tag",
+		"dzannotti.vscode-babel-coloring",
+		"jeff-hykin.better-dockerfile-syntax",
+		"ginfuru.ginfuru-better-solarized-dark-theme",
+		"coenraads.bracket-pair-colorizer-2",
+		"bierner.color-info",
+		"firefox-devtools.vscode-firefox-debug",
+		"msjsdiag.debugger-for-chrome",
+		"mikestead.dotenv",
+		"usernamehw.errorlens",
+		"ldez.ignore-files",
+		"ms-kubernetes-tools.vscode-kubernetes-tools",
+		"ms-kubernetes-tools.kind-vscode",
+		"eg2.vscode-npm-script",
+		"christian-kohler.npm-intellisense"
 	],
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
