--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -66,7 +66,8 @@
 		"herrmannplatz.npm-dependency-links",
 		"howardzuo.vscode-npm-dependency",
 		"esbenp.prettier-vscode",
-		"gruntfuggly.todo-tree"
+		"gruntfuggly.todo-tree",
+		"mutantdino.resourcemonitor"
 	],
 	// Uncomment the next line if you want start specific services in your Docker Compose config.
 	// "runServices": [],
