--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 	"mounts": [
 		"source=ext,target=/home/node/.vscode-server/extensions,type=volume",
 		"source=ext-insiders,target=/home/node/.vscode-server-insiders/extensions,type=volume",
-		"source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind"
+		"source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind",
+		"source=/home/russell/.kube,target=/home/node/.kube,type=bind"
 	],
 	"overrideCommand": false,
 	"extensions": [
