--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -55,6 +55,10 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
 
+USER node
+RUN mkdir /home/node/.kube
+USER root
+
 EXPOSE 4000
 
 ENTRYPOINT ["/usr/local/share/docker-init.sh"]
