--- a/deployment.yml
+++ b/deployment.yml
@@ -18,6 +18,8 @@ spec:
           env:
             - name: BLOG_URL
               value: "https://blog.jonesrussell42.xyz/feed.json"
+            - name: BELL_CREEK_URL
+              value: "https://bell-creek.jonesrussell42.xyz/"
           ports:
             - containerPort: 80
           readinessProbe:
