--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
 	"mounts": [
 		"source=ext,target=/home/node/.vscode-server/extensions,type=volume",
 		"source=ext-insiders,target=/home/node/.vscode-server-insiders/extensions,type=volume",
+		"source=vs-kubernetes,target=/home/node/.vs-kubernetes,type=volume",
 		"source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind",
 		"source=/home/russell/.kube,target=/home/node/.kube,type=bind"
 	],
