--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BLOG_URL=http://localhost:4000/feed.json
-BELL_CREEK_URL=http://0.0.0.0:9000/
+BLOG_URL=http://172.17.0.1:4000/feed.json
+BELL_CREEK_URL=http://172.17.0.1:9000/
