--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "autoprefixer": "^10.0.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
@@ -65,6 +66,7 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@tailwindcss/typography": "^0.3.1",
     "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.8",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
