--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "mskelton.npm-outdated",
         "herrmannplatz.npm-dependency-links",
         "howardzuo.vscode-npm-dependency",
-        "jasonnutter.search-node-modules"
+        "jasonnutter.search-node-modules",
+        "ziyasal.vscode-open-in-github"
     ]
 }
