--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BLOG_URL=http://172.17.0.1:4000/feed.json
-BELL_CREEK_URL=http://172.17.0.1:9000/
+#BLOG_URL=http://172.17.0.1:4000/feed.json
+BLOG_URL=https://blog.jonesrussell42.xyz
+BELL_CREEK_URL=https://bell-creek.jonesrussell42.xyz
