--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,58 @@
 {
     "recommendations": [
+        "ardenivanov.svelte-intellisense",
         "bradlc.vscode-tailwindcss",
+        "codezombiech.gitignore",
         "dbaeumer.vscode-eslint",
+        "delgee.sld-docker-builder",
+        "donjayamanne.githistory",
+        "eamodio.gitlens",
+        "editorconfig.editorconfig",
+        "formulahendry.docker-explorer",
+        "lior-chamla.google-fonts",
+        "marquesmps.dockerfile-validator",
+        "ms-azuretools.vscode-dapr",
+        "ms-azuretools.vscode-docker",
+        "ms-vscode.vscode-typescript-tslint-plugin",
+        "nickyhajal.vs-code-svelte-require",
+        "p1c2u.docker-compose",
+        "pivaszbs.svelte-autoimport",
+        "proverbialninja.svelte-extractor",
+        "shyykoserhiy.git-autoconfig",
         "svelte.svelte-vscode",
-        "mutantdino.resourcemonitor",
+        "tiibun.vscode-docker-ws",
+        "tombonnike.vscode-status-bar-format-toggle",
+        "vincaslt.highlight-matching-tag",
+        "zamarrowski.docker-vulnerability-extension",
+        "britesnow.vscode-toggle-quotes",
+        "visualstudioexptteam.vscodeintellicode",
+        "formulahendry.auto-close-tag",
+        "formulahendry.auto-rename-tag",
+        "dzannotti.vscode-babel-coloring",
+        "jeff-hykin.better-dockerfile-syntax",
+        "ginfuru.ginfuru-better-solarized-dark-theme",
+        "coenraads.bracket-pair-colorizer-2",
+        "bierner.color-info",
+        "firefox-devtools.vscode-firefox-debug",
+        "msjsdiag.debugger-for-chrome",
+        "mikestead.dotenv",
+        "usernamehw.errorlens",
+        "ldez.ignore-files",
+        "ms-kubernetes-tools.vscode-kubernetes-tools",
+        "ms-kubernetes-tools.kind-vscode",
+        "eg2.vscode-npm-script",
+        "christian-kohler.npm-intellisense",
+        "mindaro.mindaro",
         "mskelton.npm-outdated",
         "herrmannplatz.npm-dependency-links",
         "howardzuo.vscode-npm-dependency",
+        "esbenp.prettier-vscode",
+        "gruntfuggly.todo-tree",
+        "mutantdino.resourcemonitor",
+        "ipedrazas.kubernetes-snippets",
+        "lunuan.kubernetes-templates",
         "jasonnutter.search-node-modules",
-        "ziyasal.vscode-open-in-github"
+        "ziyasal.vscode-open-in-github",
+        "rbuckton.tsserver-live-reload"
     ]
 }
