--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "svelte-preprocess": "^4.5.1",
     "tailwindcss": "^2.0.1",
     "tslib": "^2.0.3",
+    "typeface-lobster": "^1.1.13",
     "typescript": "^4.0.3"
   },
   "engines": {
