--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,9 +47,9 @@
 			"error",
 			"double"
 		]
-	},
-	"overrides": [
-		{
+  },
+  "overrides": [
+    {
 			"files": [
 				"*.ts"
 			],
@@ -74,6 +74,7 @@
 			],
 			"processor": "svelte3/svelte3",
 			"rules": {
+        "quotes": [ 2, "single" ],
 				"import/first": "off",
 				"import/no-duplicates": "off",
 				"import/no-mutable-exports": "off",
