--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@pyoner/svelte-ts-preprocess": "^1.3.0",
     "autoprefixer": "^10.0.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
