--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
         - name: portfolio
-          image: jonesrussell/portfolio-app:1.0.0
+          image: jonesrussell/portfolio-app:1.0.1
           env:
-          - name: BLOG_URL
-            value: "https://blog.jonesrussell42.xyz/feed.json"
-          - name: BELL_CREEK_URL 
-            value: "https://bell-creek.jonesrussell42.xyz"
+            - name: BLOG_URL
+              value: "https://blog.jonesrussell42.xyz/feed.json"
+            - name: BELL_CREEK_URL
+              value: "https://bell-creek.jonesrussell42.xyz"
           ports:
             - containerPort: 3000
           readinessProbe:
@@ -51,6 +51,7 @@ spec:
   tls:
     - hosts:
         - www.jonesrussell42.xyz
+        - jonesrussell42.xyz
       secretName: portfolio-tls
   rules:
     - host: www.jonesrussell42.xyz
@@ -58,7 +59,7 @@ spec:
         paths:
           - backend:
               serviceName: portfolio-sapper
-              servicePort: 3000 
+              servicePort: 3000
 ---
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
@@ -89,4 +90,3 @@ spec:
     - protocol: TCP
       port: 3000
   type: ClusterIP
-
