--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 				"dev": "run-p validate:dev sapper:dev",
 				"prod": "run-s sapper:build static:rmdir static:mkdir static:cp validate",
 				"start": "node __sapper__/build",
+				"start:export": "serve __sapper__/export",
 				"deploy": "run-s prod firebase:deploy",
 				"export": "run-s sapper:export static:404:cp static:404:rmdir validate",
 				"deploy:export": "run-s export firebase:deploy:hosting"
@@ -44,11 +45,12 @@
 				"@fortawesome/free-solid-svg-icons": "^5.15.1",
 				"@pyoner/svelte-ts-preprocess": "^1.3.0",
 				"autoprefixer": "^10.0.3",
+				"compression": "^1.7.4",
 				"cors": "^2.8.5",
 				"dotenv": "^8.2.0",
 				"express": "^4.17.1",
-				"compression": "^1.7.4",
 				"node-fetch": "^2.6.1",
+				"serve": "^11.3.2",
 				"sirv": "^1.0.10"
 		},
 		"devDependencies": {
