--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,34 +1,24 @@
-name: Build and Deploy
-on:
-  push:
-    branches:
-      - main
-      - master
+name: Export Sapper and Deploy to Kubernetes
+
+on: [push]
 
 jobs:
-  build:
-    name: Build and Deploy
-    runs-on: ubuntu-20.04
+  build_deploy:
+    runs-on: ubuntu-latest
     steps:
-      - name: "Checkout Repo"
-        uses: actions/checkout@master
-
-      - name: "Install npm"
-        uses: npm/action-setup@v1.2.1
+      - uses: actions/checkout@master
+      - name: Build Sapper
+        uses: truewebartisans/actions-sapper@master
         with:
-          version: 5.8
-      - name: "Install Production and Development Dependencies"
-        run: "npm install"
-
-      # This section makes as many pages as possible static.
-      # If you don't want that, remove it and replace firebase:deploy:functions with firebase:deploy below
-      - name: "Export a Static Build"
-        run: "npm run export"
-      - name: "Deploy Hosting"
-        run: "npm run firebase:deploy:hosting"
-
-      # On the other hand, if you only want your site to be static, remove this section
-      - name: "Build for Production"
-        run: "npm run prod"
-      - name: "Remove all but Production Dependencies"
-        run: "npm install --only prod"
+          build_mode: "export"
+          args: "--legacy"
+#      - name: Deploy to remote virtual server via SSH
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.REMOTE_HOST }}
+#          username: ${{ secrets.REMOTE_USER }}
+#          key: ${{ secrets.SSH_KEY }}
+#          passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
+#          rm: true
+#          source: __sapper__/build/
+#          target: ${{ secrets.REMOTE_DIR }}
