--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,10 +12,6 @@ jobs:
       - name: "Checkout Repo"
         uses: actions/checkout@master
 
-      #      - name: "Install npm"
-      #        uses: npm/action-setup@v1.2.1
-      #        with:
-      #          version: 5.8
       - name: "Install Production and Development Dependencies"
         run: "npm install"
 
@@ -23,24 +19,23 @@ jobs:
       # If you don't want that, remove it and replace firebase:deploy:functions with firebase:deploy below
       - name: "Export a Static Build"
         run: "npm run export"
+
+      - name: DigitalOcean Kubernetes
+        uses: matootie/dokube@v1.3.4
+        with:
+          personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
+          clusterName: galaxy-k8s
+      - name: Apply deployment updates
+        run: kubectl apply -f kubernetes.yml
+#      - name: Build Sapper
+#        uses: truewebartisans/actions-sapper@master
+#        with:
+#          build_mode: "export"
+#          args: "--legacy"
+
 #      - name: "Deploy Hosting"
 #        run: "npm run firebase:deploy:hosting"
 #  build_deploy:
 #    runs-on: ubuntu-latest
 #    steps:
 #      - uses: actions/checkout@master
-#      - name: Build Sapper
-#        uses: truewebartisans/actions-sapper@master
-#        with:
-#          build_mode: "export"
-#          args: "--legacy"
-#      - name: Deploy to remote virtual server via SSH
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: ${{ secrets.REMOTE_USER }}
-#          key: ${{ secrets.SSH_KEY }}
-#          passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
-#          rm: true
-#          source: __sapper__/build/
-#          target: ${{ secrets.REMOTE_DIR }}
