--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,20 +5,45 @@ on:
       - main
 
 jobs:
-  build:
-    name: Build and Deploy
-    runs-on: ubuntu-20.04
+  export-docker:
+    runs-on: ubuntu-latest
     steps:
-      - name: "Checkout Repo"
-        uses: actions/checkout@master
-
-      - name: "Install Production and Development Dependencies"
-        run: "npm install"
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          load: true
+          tags: jonesrussell/portfolio-sapper:latest
+      -
+        name: Inspect
+        run: |
+          docker image inspect jonesrussell/portfolio-sapper:latest
+#  build:
+#    name: Build and Deploy
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - name: "Checkout Repo"
+#        uses: actions/checkout@master
+#
+#      - name: "Install Production and Development Dependencies"
+#        run: "npm install"
 
       # This section makes as many pages as possible static.
       # If you don't want that, remove it and replace firebase:deploy:functions with firebase:deploy below
-      - name: "Export a Static Build"
-        run: "npm run export"
+#      - name: "Export a Static Build"
+#        run: "npm run export"
+#
+#      - name: Build and push Docker images
+#        uses: docker/build-push-action@v2.2.2
+
 #      - name: DigitalOcean Kubernetes
 #        uses: matootie/dokube@v1.3.4
 #        with:
