--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: portfolio
-          image: jonesrussell/portfolio-app:1.0.3
+          image: jonesrussell/portfolio-app:latest
           env:
             - name: BLOG_URL
               value: "https://blog.jonesrussell42.xyz/feed.json"
