--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,9 +27,11 @@ jobs:
         with:
           personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
           clusterName: galaxy-k8s
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Apply deployment updates
+        with:
+          context: .
+          file: ./kubernetes.yml
+          load: true
         run: kubectl apply -f ./kubernetes.yml
 
 #  build:
