--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,16 +22,16 @@ jobs:
       - name: Inspect
         run: |
           docker image inspect jonesrussell/portfolio-sapper:latest
-      - name: DigitalOcean Kubernetes
-        uses: matootie/dokube@v1.3.4
-        with:
-          personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
-          clusterName: galaxy-k8s
-      - name: Apply deployment updates
-        with:
-          context: .
-          file: ./kubernetes.yml
-        run: kubectl apply
+#      - name: DigitalOcean Kubernetes
+#        uses: matootie/dokube@v1.3.4
+#        with:
+#          personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
+#          clusterName: galaxy-k8s
+#      - name: Apply deployment updates
+#        with:
+#          context: .
+#          file: ./kubernetes.yml
+#        run: kubectl apply
 
 #  build:
 #    name: Build and Deploy
