--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,20 +8,24 @@ jobs:
   export-docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      -
+        name: Checkout
         uses: actions/checkout@v2
-      - name: Set up Docker Buildx
+      -
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Build
+      -
+        name: Build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          tags: jonesrussell/portfolio-sapper:latest
-          push: true
-      - name: Inspect
+          load: true
+          tags: jonesrussell/portfolio-app:latest
+      -
+        name: Inspect
         run: |
-          docker image inspect jonesrussell/portfolio-sapper:latest
+          docker image inspect jonesrussell/portfolio-app:latest
 #      - name: DigitalOcean Kubernetes
 #        uses: matootie/dokube@v1.3.4
 #        with:
