--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -52,5 +52,5 @@ jobs:
 #      - name: "Export a Static Build"
 #        run: "npm run export"
 #
-#      - name: Build and push Docker images
-#        uses: docker/build-push-action@v2.2.2
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2.2.2
