--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,3 +28,13 @@ jobs:
       #            arg2=value2
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: DigitalOcean Kubernetes
+        uses: matootie/dokube@v1.3.4
+        with:
+          personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
+          clusterName: galaxy-k8s
+      - name: Apply deployment updates
+        with:
+          context: .
+          file: ./kubernetes.yml
+        run: kubectl apply
