--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,4 +37,4 @@ jobs:
         with:
           context: .
           file: ./kubernetes.yml
-        run: kubectl apply
+        run: kubectl apply -f
