--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,4 +36,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Apply deployment updates
-        run: kubectl apply -f ./kubernetes.yml
+        run: kubectl apply -f kubernetes.yml
+        with:
+          path: ./
