--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 				"cors": "^2.8.5",
 				"dotenv": "^8.2.0",
 				"express": "^4.17.1",
+				"github-fork-ribbon-css": "^0.2.3",
 				"node-fetch": "^2.6.1",
 				"serve": "^11.3.2",
 				"sirv": "^1.0.10"
