--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 				"autoprefixer": "^10.0.3",
 				"compression": "^1.7.4",
 				"cors": "^2.8.5",
+				"date-fns": "^2.17.0",
 				"dotenv": "^8.2.0",
 				"express": "^4.17.1",
 				"node-fetch": "^2.6.1",
