--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -17,7 +17,7 @@ spec:
           image: jonesrussell/portfolio-app:latest
           env:
             - name: BLOG_URL
-              value: "https://blog.jonesrussell42.xyz/feed.json"
+              value: "https://blog.jonesrussell42.xyz"
             - name: BELL_CREEK_URL
               value: "https://bell-creek.jonesrussell42.xyz"
           ports:
