--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "export": "run-s sapper:export static:404:cp static:404:rmdir",
     "deploy:export": "run-s export firebase:deploy:hosting",
     "docker:build": "docker build -t jonesrussell/portfolio-app:latest .",
-    "docker:push": "docker push jonesrussell/portfolio-app:latest"
+    "docker:push": "docker push jonesrussell/portfolio-app:latest",
+    "kube:deploy": "kubectl deploy -f kubernetes.yml"
   },
   "dependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.3.0",
