--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -18,6 +18,8 @@ spec:
           env:
             - name: BELL_CREEK_URL
               value: "https://bell-creek.jonesrussell42.xyz"
+            - name: BLOG_URL
+              value: "https://blog.jonesrussell42.xyz"
           ports:
             - containerPort: 5000
           readinessProbe:
