--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "highlight.js": "^10.6.0",
     "node-fetch": "^2.6.1",
     "serve": "^11.3.2",
     "sirv": "^1.0.11"
